--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Homepage of the VoidNexus universe.">
-    <link id="stylesheet" rel="stylesheet" href="CSS/style.css" media="screen and (min-width: 709px)">
-    <link id="lightstyle" rel="stylesheet" href="CSS/lightstyle.css" media="screen and (min-width: 709px)" disabled>
-    <link id="mstylesheet" rel="stylesheet" href="CSS/mstyle.css" media="screen and (max-width: 710px)">
-    <link id="mlightstyle" rel="stylesheet" href="CSS/mlightstyle.css" media="screen and (max-width: 710px)" disabled>
+    <link id="stylesheet" rel="stylesheet" href="Homepage/CSS/style.css" media="screen and (min-width: 709px)">
+    <link id="lightstyle" rel="stylesheet" href="Homepage/CSS/lightstyle.css" media="screen and (min-width: 709px)" disabled>
+    <link id="mstylesheet" rel="stylesheet" href="Homepage/CSS/mstyle.css" media="screen and (max-width: 710px)">
+    <link id="mlightstyle" rel="stylesheet" href="Homepage/CSS/mlightstyle.css" media="screen and (max-width: 710px)" disabled>
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/2767/2767163.png" type="image/png" media="(prefers-color-scheme: light)">
     <link rel="icon" href="https://i.ibb.co/6D99ffD/image.png" type="image/png" media="(prefers-color-scheme: dark)">
     <title>VoidClicker by TheVoidNexus</title>
@@ -114,10 +114,10 @@
   </div>
   </div>
 
-<script src="Javascript/game.js"></script>
-<script src="Javascript/init.js"></script>
-<script src="Javascript/background.js"></script>
-<script src="Javascript/translation.js"></script>
-<script src="Javascript/firebase.js" type="module"></script>
+<script src="Homepage/Javascript/game.js"></script>
+<script src="Homepage/Javascript/init.js"></script>
+<script src="Homepage/Javascript/background.js"></script>
+<script src="Homepage/Javascript/translation.js"></script>
+<script src="Homepage/Javascript/firebase.js" type="module"></script>
 </body>
 </html>
