--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="https://thevoidnexus.github.io" id="main" class="main">thevoidnexus.github.io</a>
+    <a href="https://thevoidnexus.com" id="main" class="main">thevoidnexus.com</a>
     <p id="playtime" class="playtime"></p>
     <div class="container2">
         <button onclick="redirect()" class="database" id="database">Database</button>
