--- a/database.html
+++ b/database.html
@@ -21,7 +21,7 @@
     <div class="overlay" id="overlay"></div>
     <div id="dynamic-background" class="dynamic-background"></div>
     <div class="header">
-        <a href="https://thevoidnexus.github.io" class="main">thevoidnexus.github.io</a>
+        <a href="https://thevoidnexus.com" class="main">thevoidnexus.com</a>
         <p class="title">Database</p>
         <div class="header2">
             <button onclick="redirect()" class="redirect">VoidClicker</button>
