--- a/calculator.html
+++ b/calculator.html
@@ -14,7 +14,7 @@
 <body>
     <div class="dynamic-background"></div>
     <div class="container">
-        <a href="https://thevoidnexus.github.io" id="main" class="main">thevoidnexus.github.io</a>
+        <a href="https://thevoidnexus.com" id="main" class="main">thevoidnexus.com</a>
         <p id="playtime" class="playtime">Calculator</p>
         <div class="container2">
             <button onclick="redirect()" class="database" id="voidclicker">VoidClicker</button>
