--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link id="stylesheet" rel="stylesheet" href="Homepage/CSS/404.css">
+  <link id="stylesheet" rel="stylesheet" href="Game/CSS/404.css">
   <link rel="icon" href="//www.gstatic.com/monospace/230530/favicon.ico" sizes="16x16">
   <title>404 - Not found</title>
 </head>
@@ -24,6 +24,8 @@
     <a class="closebtn" onclick="closeNav()">&times;</a>
     <div class="menu-section">
     <p class="menu-title" id="menu-projects">Other Projects</p>
+    <button onclick="redirect3()" class="manager" id="manager">Manager</button>
+    <button onclick="redirect4()" class="game" id="game">VoidClicker</button>
     <button onclick="redirect()" class="database" id="database">Database</button>
     <button onclick="redirect2()" class="calculator" id="calculator">Calculator</button>
   </div>
@@ -60,6 +62,6 @@
     <p class="removed" id="removed">It may not exist or got removed.</p>
     <p class="returnp"><a onclick="redirect()" id="return" class="return">Return to the Homepage</a></p>
   
-<script src="Homepage/Javascript/404.js"></script>
+<script src="Game/Javascript/404.js"></script>
 </body>
 </html>
