--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Login to see the contents of this page.">
-    <link id="stylesheet" rel="stylesheet" href="Login/style.css">
+    <link id="stylesheet" rel="stylesheet" href="Game/Login/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/themes/dark.css" />
     <link rel="icon" href="https://i.ibb.co/qdq1wXW/Bild-2024-10-03-113901995.webp" type="image/webp">
     <link href="https://fonts.cdnfonts.com/css/minecraft-3" rel="stylesheet">
@@ -58,9 +58,9 @@
         </button>
     </div>
 
-    <script src="Login/script.js"></script>
-    <script src="Login/translation.js"></script>
-    <script src="Login/authentication.js" type="module"></script>
+    <script src="Game/Login/script.js"></script>
+    <script src="Game/Login/translation.js"></script>
+    <script src="Game/Login/authentication.js" type="module"></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/shoelace.js"></script>
 </body>
 </html>
