--- a/login.html
+++ b/login.html
@@ -1,66 +1,54 @@
 <!DOCTYPE html>
-<html lang="en" class="sl-theme-dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Login to see the contents of this page.">
-    <link id="stylesheet" rel="stylesheet" href="Game/Login/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/themes/dark.css" />
-    <link rel="icon" href="https://i.ibb.co/qdq1wXW/Bild-2024-10-03-113901995.webp" type="image/webp">
-    <link href="https://fonts.cdnfonts.com/css/minecraft-3" rel="stylesheet">
-    <title>Login - TheVoidNexus</title>
-</head>
-<body>
-    <div class="dynamic-background"></div>
-    <div class="overlay" id="overlay"></div>
-    <div class="container">
-        <div id="menuIcon" class="menu-icon" onclick = "openNav()">&#9776;</div>
-        <h1 class="title" id="title">Login</h1>
-        <img src="https://i.ibb.co/QXhsFjL/user.png" id="pfp" class="pfp" alt="">
-    </div>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="https://i.ibb.co/7WX4k64/abstract.png" >
+        <link rel="stylesheet" href="TVN-Manager/Login/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <title>VoidClicker - Login</title>
+    </head>
+    <body>
 
-    <div id="sidebar" class="sidebar">
-        <a class="closebtn" onclick="closeNav()">&times;</a>
+      <div class="gradientBackground"></div>
 
-        <div class="menu-section">
-            <p id="menu-language">Language</p>
-            <sl-select pill value="" onchange="setLanguage(this.value)" id="language-select">
-                <sl-option value="en">English</sl-option>
-                <sl-option value="de">Deutsch</sl-option>
-              </sl-select>  
-              </div>
-
-        <div class="menu-section">
-            <p class="menu-developer" id="menu-developer">Developer</p>
-            <div class="developer">
-                <div class="developer-container">
-                    <p class="developer-text">TheVoidNexus</p>
-                    </span>
-                </div>
-            </div>
+ <div class="form-container">
+      <h1 class="title">Welcome</h1>
+      <p class="description">Signing in enables the syncing of your progress across different devices.</p>
+      <div class="buttons-container">
+        <div class="google-login-button">
+            <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1.1" x="0px" y="0px" class="google-icon" viewBox="0 0 48 48" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
+              <path fill="#FFC107" d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12
+      c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24
+      c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z"></path>
+              <path fill="#FF3D00" d="M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657
+      C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z"></path>
+              <path fill="#4CAF50" d="M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36
+      c-5.202,0-9.619-3.317-11.283-7.946l-6.522,5.025C9.505,39.556,16.227,44,24,44z"></path>
+              <path fill="#1976D2" d="M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.571
+      c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,43.611,20.083z"></path>
+            </svg>
+            <span id="google">Log in with Google</span>
+          </div>
+        <div class="microsoft-login-button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="100" height="100" class="microsoft-icon">
+                <rect x="2" y="2" width="20" height="20" fill="#F25022"/>
+                <rect x="26" y="2" width="20" height="20" fill="#7FBA00"/>
+                <rect x="2" y="26" width="20" height="20" fill="#00A4EF"/>
+                <rect x="26" y="26" width="20" height="20" fill="#FFB900"/>
+              </svg>              
+          <span id="microsoft">Log in with Microsoft</span>
         </div>
+      </div>
 
-        <div class="menu-section">
-            <p class="menu-bugs" id="menu-bugs">If you encounter any bugs or have a suggestion, please contact core staff</p>
-        </div>
-    </div>
+      <button type="button" class="back-button" id="back">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M21 11H6.414l5.293-5.293-1.414-1.414L2.586 12l7.707 7.707 1.414-1.414L6.414 13H21z"/>
+        </svg>
+        <span>Back</span>
+      </button>
 
-    <div class="login-container">
-        <p class="login-code" id="login-code">Logged out</p>
-        <p class="login-info" id="login-info">This website requires authentication to view its content.</p>
-        <button id="google-login" class="google-btn">
-            <img src="https://img.icons8.com/color/48/000000/google-logo.png" alt="Google Logo">
-            <span class="login-text" id="login-text">Sign in</span>
-        </button>
-        <button id="microsoft-login" class="microsoft-btn">
-            <img src="https://pngimg.com/uploads/microsoft/microsoft_PNG5.png" alt="Microsoft Logo">
-            <span class="login-text" id="login-text2">Sign in</span>
-        </button>
-    </div>
-
-    <script src="Game/Login/script.js"></script>
     <script src="Game/Login/translation.js"></script>
     <script src="Game/Login/authentication.js" type="module"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/shoelace.js"></script>
-</body>
+    </body>
 </html>
