--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
     <div class="grid">
     <h2 class="dev">In Development</h2>
-    <p>Meanwhile, try out my other projects:</p>
+    <h3>Projects:</h3>
     <br>
+    <p class="link" onclick="redirect5()">Polyrythm</p>
     <p class="link" onclick="redirect()">TVN-Manager</p>
     <p class="link" onclick="redirect2()">VoidClicker</p>
     <p class="link" onclick="redirect3()">Calculator</p>
